ByteBufferCleaner should avoid Unsafe access in Java 23+